Fixed Hero page spacing on smaller screens

--- a/src/components/Front/Front.css
+++ b/src/components/Front/Front.css
@@ -40,6 +40,7 @@
   height: auto;
   width: 50vw;
   padding-bottom: 1vw;
+  padding-top: 65px;
 }
 
 .HeroText {
